# Course-Availability-Tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Old/backend/: .env.example  package.json  pm2.config.js
Old/backend/src/: logger.js  routes.js
Old/backend/src/utils/: logger.js
Old/tampermonkey/: course-monitor.user.js
Python-playwright Alternative/: seat_monitor.py
backend/src/: config.js  mailer.js  server.js
docs/: api.md  architecture.md  concurrency.md  lifecycle.md  oldArchitecture.md  setup.md
scripts/: run_local.sh
src/api/: main.py  routes.py  schemas.py
src/seat_monitor/: config.py  main.py  notifier.py  scraper.py  state.py
src/services/: monitor_manager.py  notification_store.py  persistence.py
src/ui/static/: app.js  styles.css
src/ui/templates/: index.html
tampermonkey/: README.md
