[project]
name = "course-seat-monitor"
version = "0.1.0"
description = "Monitor dynamically loaded university course seats and send email alerts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
    "python-dotenv>=1.0"
]

[tool.setuptools.packages.find]
where = ["src"]
